--- a/src/app/_content/app.less
+++ b/src/app/_content/app.less
@@ -651,3 +651,11 @@ body.jw-modal-open {
   background-color:  #dff0d8;;
   color: black;
 }
+
+.qr_name {
+  font-size: 20px;
+  font-weight: 800;
+  font-family: 'Courier New', Courier, monospace;
+  text-align: center;
+  margin-left: 20px;
+}
