--- a/src/app/_component/job-history-action/job-history-action.component.html
+++ b/src/app/_component/job-history-action/job-history-action.component.html
@@ -1,11 +1,164 @@
-﻿<div class="side-form">
-    <nav class="navbar navbar-inverse"
-        style="border-radius: 0px;margin-bottom: 0px;">
-        <div class="container-fluid">
-            <button type="button" (click)="backClicked()"
-                style="margin-top: 7px;" class="btn btn-sm btn-default">
-                <span class="glyphicon glyphicon-chevron-left"></span>Back
-            </button>
+﻿<!-- breadcrumb -->
+<ol class="breadcrumb">
+    <li><a routerLink="/home">Home</a></li>
+    <li><a routerLink="/jobList">Job List</a></li>
+    <li class="active">Job History</li>
+</ol>
+<div class="row" style="margin-right: 0px;margin-left: 0px;" *ngIf="sourceJob">
+    <div class="col-lg-12">
+        <div class="panel panel-success">
+            <div class="panel-heading">
+                <div class="row">
+                    <div class="col-lg-6" style="text-align: start;margin-top: 2px;">
+                        Job-Q-History
+                    </div>
+                </div>
+            </div>
+            <div class="panel-body" style="padding-left: 25px;">
+                <div class="row">
+                    <div class="col-sm-3">
+                        <div class="form-group">
+                            <label>JobName: {{sourceJob.jobId}}-{{sourceJob.jobName}}</label>
+                        </div>
+                        <div class="form-group">
+                            <label>TaskName: {{sourceJob?.taskDetail?.taskDetailId}}-{{sourceJob?.taskDetail?.taskName}}</label>
+                        </div>
+                        <div class="form-group">
+                            <label>LastRun: {{sourceJob.lastJobRun | date:'yyyy-MM-dd HH:mm:ss'}}</label>
+                        </div>
+                    </div>
+                    <div class="col-sm-3">
+                        <div class="form-group">
+                            <label>Execution:
+                                <span class="badge" [ngClass]="sourceJob.execution == 'Manual' ? 
+                                    'badge-success' : 'badge-warning'">{{sourceJob.execution}}
+                                </span>
+                            </label>
+                        </div>
+                        <div class="form-group">
+                            <label>R-Status: 
+                                <span *ngIf="sourceJob.jobRunningStatus" class="badge"
+                                    [ngClass]="{
+                                        'badge-primary' : sourceJob.jobRunningStatus === 'InFlight', 
+                                        'badge-info' : sourceJob.jobRunningStatus === 'Queue',
+                                        'badge-warning' : sourceJob.jobRunningStatus === 'Running',
+                                        'badge-danger' :  sourceJob.jobRunningStatus === 'Failed',
+                                        'badge-success' : sourceJob.jobRunningStatus === 'Completed'
+                                    }">
+                                    {{ sourceJob.jobRunningStatus }}
+                                </span>
+                            </label>
+                        </div>
+                        <div class="form-group" *ngIf="sourceJob?.scheduler?.recurrenceTime">
+                            <label>NextFlight: {{sourceJob?.scheduler?.recurrenceTime | date:'yyyy-MM-dd HH:mm:ss'}}</label>
+                        </div>
+                    </div>
+                    <div class="col-sm-4" *ngIf="sourceJobStatistics">
+                        <label style="margin-left: 35%;">Total Job Detail</label>
+                        <table class="table table-bordered "
+                            style="font-size: 10px;">
+                            <thead>
+                                <tr>
+                                    <th>Queue</th>
+                                    <th>Running</th>
+                                    <th>Failed</th>
+                                    <th>Completed</th>
+                                    <th>Skip</th>
+                                    <th>Total</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <th>{{sourceJobStatistics.queue}}</th>
+                                    <th>{{sourceJobStatistics.running}}</th>
+                                    <th>{{sourceJobStatistics.failed}}</th>
+                                    <th>{{sourceJobStatistics.completed}}</th>
+                                    <th>{{sourceJobStatistics.skip}}</th>
+                                    <th>{{sourceJobStatistics.total}}</th>
+                                </tr>
+                            </tbody>
+                        </table>    
+                    </div>
+                    <div class="col-sm-2">
+                        <ngx-qrcode-styling style="float: right;"
+                            [data]="pdfUrl"
+                            [width]="1300"
+                            [height]="1100"
+                            [dotsOptions]="{
+                                color: '#b53838'
+                            }"
+                            [frameOptions]="{
+                                style: 'FE_021',
+                                height: 110,
+                                width: 110,
+                                x: 200,
+                                y: 1250,
+                                containers: [{
+                                    fill: '#b53838'
+                                }
+                            ]}">
+                        </ngx-qrcode-styling>
+                    </div>
+                </div>
+            </div>
         </div>
-    </nav>
+    </div>
+</div>
+<!-- table -->
+<div class="col-lg-4" *ngIf="sourceJobQueues">
+    <div class="form-group">
+        <label for="searchQMessageForm" *ngIf="sourceJobQueues">Total Queue Message ({{sourceJobQueues.length}})</label>
+        <input type="text" id="searchQMessageForm" class="form-control input-sm"
+            placeholder="Search" [(ngModel)]="searchQMessageForm"/>
+    </div>
+</div>
+<div style="padding-left: 15px;padding-right: 15px;" *ngIf="sourceJobQueues">
+    <table id="lookup" class="table table-responsive table table-striped
+        table-bordered table-sm" style="font-size: 12px;">
+        <thead>
+            <tr>
+                <th># QId</th>
+                <th># Job Id</th>
+                <th>Date Created</th>
+                <th>Start Time</th>
+                <th>End Time</th>
+                <th>Skip Time</th>
+                <th>Job Status</th>
+                <th>JobStatus Message</th>
+                <th style="width: 1px;">Action</th>
+            </tr>
+        </thead>
+        <tbody style="text-align: center;">
+            <tr *ngFor="let queueData of sourceJobQueues | searchFilter: searchQMessageForm; let i = index">
+                <td>{{queueData.jobQueueId}}</td>
+                <td>{{queueData.jobId}}</td>
+                <td>{{queueData.dateCreated | date:'yyyy-MM-dd HH:mm:ss'}}</td>
+                <td>{{queueData.startTime | date:'yyyy-MM-dd HH:mm:ss'}}</td>
+                <td>{{queueData.endTime | date:'yyyy-MM-dd HH:mm:ss'}}</td>
+                <td>{{queueData.skipTime | date:'yyyy-MM-dd HH:mm:ss'}}</td>
+                <td style="text-align: center;">
+                    <span *ngIf="queueData.jobStatus" class="badge"
+                        [ngClass]="{
+                            'badge-primary' : queueData.jobStatus === 'InFlight', 
+                            'badge-info' : queueData.jobStatus === 'Queue',
+                            'badge-warning' : queueData.jobStatus === 'Running',
+                            'badge-danger' :  queueData.jobStatus === 'Failed',
+                            'badge-success' : queueData.jobStatus === 'Completed',
+                            'badge-pcomplate' : queueData.jobStatus === 'PartialComplete'
+                        }">
+                        {{ queueData.jobStatus }}
+                    </span>
+                </td>
+                <td>{{queueData.jobStatusMessage}}</td>
+                <td style="text-align: center;">
+                    <div class="btn-group btn-group-xs" role="group" style="text-align: center">
+                        <button type="button" class="btn btn-default" [disabled]="queueData.jobStatus !== 'Queue'"
+                            (click)="logsDeatilQMessage(queueData, i)">
+                            <span class="glyphicon glyphicon-log-in" style="color: black;"></span>
+                        </button>
+                    </div>
+                </td>
+            </tr>
+        </tbody>
+    </table>
 </div>
