--- a/src/app/_component/job-history-action/job-history-action.component.html
+++ b/src/app/_component/job-history-action/job-history-action.component.html
@@ -18,13 +18,13 @@
                 <div class="row">
                     <div class="col-sm-3">
                         <div class="form-group">
-                            <label>JobName: {{sourceJob.jobId}}-{{sourceJob.jobName}}</label>
+                            <label>JobName: {{sourceJob.jobId}} - {{sourceJob.jobName}}</label>
                         </div>
                         <div class="form-group">
-                            <label>TaskName: {{sourceJob?.taskDetail?.taskDetailId}}-{{sourceJob?.taskDetail?.taskName}}</label>
+                            <label>TaskName: {{sourceJob?.taskDetail?.taskDetailId}} - {{sourceJob?.taskDetail?.taskName}}</label>
                         </div>
                         <div class="form-group">
-                            <label>LastRun: {{sourceJob.lastJobRun | date:'yyyy-MM-dd HH:mm:ss'}}</label>
+                            <label style="color: rgb(139, 34, 34);">LastRun: {{sourceJob.lastJobRun | date:'yyyy-MM-dd HH:mm:ss'}}</label>
                         </div>
                     </div>
                     <div class="col-sm-3">
@@ -49,8 +49,8 @@
                                 </span>
                             </label>
                         </div>
-                        <div class="form-group" *ngIf="sourceJob?.scheduler?.recurrenceTime">
-                            <label>NextFlight: {{sourceJob?.scheduler?.recurrenceTime | date:'yyyy-MM-dd HH:mm:ss'}}</label>
+                        <div class="form-group">
+                            <label style="color: rgb(139, 34, 34);">NextFlight: {{sourceJob?.scheduler?.recurrenceTime | date:'yyyy-MM-dd HH:mm:ss'}}</label>
                         </div>
                     </div>
                     <div class="col-sm-4" *ngIf="sourceJobStatistics">
@@ -79,25 +79,30 @@
                             </tbody>
                         </table>    
                     </div>
-                    <div class="col-sm-2">
-                        <ngx-qrcode-styling style="float: right;"
-                            [data]="pdfUrl"
-                            [width]="1300"
-                            [height]="1100"
-                            [dotsOptions]="{
-                                color: '#b53838'
-                            }"
-                            [frameOptions]="{
-                                style: 'FE_021',
-                                height: 110,
-                                width: 110,
-                                x: 200,
-                                y: 1250,
-                                containers: [{
-                                    fill: '#b53838'
-                                }
-                            ]}">
-                        </ngx-qrcode-styling>
+                    <div class="col-sm-2" style="text-align: center;">
+                        <ngx-qrcode-styling [data]="'ngx-qrcode-styling'"
+                        [width]="190"
+                        [height]="190"
+                        [template]="'bitcoin'"
+                        [frameOptions]="{
+                          style: 'FE_015',
+                          height: 110,
+                          width: 110,
+                          x: 55,
+                          y: 90, 
+                          containers: [{
+                            fill: '#F69223' 
+                          }],
+                          texts: [{
+                            textContent: 'Scan Me',
+                            fill: '#F69223',
+                            x: '27%',
+                            y: '17%',
+                            fontSize: '25pt',
+                            fontFamily: 'cursive',
+                            fontWeight: 'bold'  
+                          }]
+                        }"></ngx-qrcode-styling>
                     </div>
                 </div>
             </div>
@@ -152,7 +157,7 @@
                 <td>{{queueData.jobStatusMessage}}</td>
                 <td style="text-align: center;">
                     <div class="btn-group btn-group-xs" role="group" style="text-align: center">
-                        <button type="button" class="btn btn-default" [disabled]="queueData.jobStatus !== 'Queue'"
+                        <button type="button" class="btn btn-default"
                             (click)="logsDeatilQMessage(queueData, i)">
                             <span class="glyphicon glyphicon-log-in" style="color: black;"></span>
                         </button>
