--- a/src/app/_content/app.less
+++ b/src/app/_content/app.less
@@ -659,3 +659,64 @@ body.jw-modal-open {
   text-align: center;
   margin-left: 20px;
 }
+
+.page-content {
+  min-height: 300px;
+  padding-bottom: 40px;
+  font-size: 16px;
+  line-height: 22px;
+}
+
+.page-content ul {
+  padding-left: 30px;
+}
+
+.page-content ul li {
+  list-style: disc;
+}
+
+.cheat-chart-item {
+  display: inline-block;
+  vertical-align: top;
+  text-align: center;
+  width: 120.5px;
+  border: 2px solid rgba(0,0,0,0);
+  cursor: pointer;
+  transition: all 0.4s;
+}
+
+.cheat-chart-item a {
+  text-decoration: none;
+}
+
+a {
+  color: #337ab7;
+}
+a {
+  background-color: transparent;
+}
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.cheat-chart-item img {
+  margin-top: 5px;
+  width: 90px;
+  height: 90px;
+  padding: 5px 10px;
+}
+
+.cheat-chart-item h5 {
+  color: #000;
+  font-weight: normal;
+  margin: 10px 0;
+  padding: 0;
+  line-height: 18px;
+  position: relative;
+}
+
+.graph:hover {
+  background-color: white;
+}
