--- a/src/app/_component/source-job/job/job.component.html
+++ b/src/app/_component/source-job/job/job.component.html
@@ -220,10 +220,9 @@
                     </div>
                     <div class="row">
                         <div class="col-lg-12">
+                            <button type="reset" class="btn btn-sm btn-default" (click)="addSourceJobFormInit()"
+                                style="color: #345; background-color:#fff;border-color: black;float: left;">Clear</button>
                             <button type="submit" class="btn btn-sm btn-danger" style="float: right;">Save</button>
-                            &nbsp;&nbsp;
-                            <button type="reset" class="btn btn-sm btn-default"
-                                style="float: right;margin-right: 10px;" (click)="addSourceJobFormInit()">Clear</button>
                         </div>
                     </div>
                 </div>
