--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -46,6 +46,12 @@
           <li><a routerLink="/setting">Lookup Setting</a></li>
         </ul>
       </li>
+      <li class="dropdown">
+        <a routerLink="/searchEngine" class="dropdown-toggle" data-toggle="dropdown"
+          role="button" aria-haspopup="true" aria-expanded="false">
+          Search Engine
+        </a>
+      </li>
     </ul>
   </div>
 </nav>
