--- a/src/app/_component/job-history-action/job-history-action.component.html
+++ b/src/app/_component/job-history-action/job-history-action.component.html
@@ -50,13 +50,14 @@
                             </label>
                         </div>
                         <div class="form-group">
-                            <label style="color: rgb(139, 34, 34);">NextFlight: {{sourceJob?.scheduler?.recurrenceTime | date:'yyyy-MM-dd HH:mm:ss'}}</label>
+                            <label style="color: rgb(139, 34, 34);">
+                                NextFlight: {{sourceJob?.scheduler?.recurrenceTime | date:'yyyy-MM-dd HH:mm:ss'}}
+                            </label>
                         </div>
                     </div>
                     <div class="col-sm-4" *ngIf="sourceJobStatistics">
                         <label style="margin-left: 35%;">Total Job Detail</label>
-                        <table class="table table-bordered "
-                            style="font-size: 10px;">
+                        <table class="table table-bordered " style="font-size: 10px;">
                             <thead>
                                 <tr>
                                     <th>Queue</th>
@@ -77,32 +78,32 @@
                                     <th>{{sourceJobStatistics.total}}</th>
                                 </tr>
                             </tbody>
-                        </table>    
+                        </table>
                     </div>
                     <div class="col-sm-2" style="text-align: center;">
                         <ngx-qrcode-styling [data]="'ngx-qrcode-styling'"
-                        [width]="190"
-                        [height]="190"
-                        [template]="'bitcoin'"
-                        [frameOptions]="{
-                          style: 'FE_015',
-                          height: 110,
-                          width: 110,
-                          x: 55,
-                          y: 90, 
-                          containers: [{
-                            fill: '#F69223' 
-                          }],
-                          texts: [{
-                            textContent: 'Scan Me',
-                            fill: '#F69223',
-                            x: '27%',
-                            y: '17%',
-                            fontSize: '25pt',
-                            fontFamily: 'cursive',
-                            fontWeight: 'bold'  
-                          }]
-                        }"></ngx-qrcode-styling>
+                            [width]="190" [height]="190" [template]="'bitcoin'"
+                            [frameOptions]="{
+                            style: 'FE_015',
+                            height: 110,
+                            width: 110,
+                            x: 55,
+                            y: 90, 
+                            containers: [{
+                                fill: '#F69223' 
+                            }],
+                            texts: [{
+                                textContent: 'Scan Me',
+                                fill: '#F69223',
+                                x: '27%',
+                                y: '17%',
+                                fontSize: '25pt',
+                                fontFamily: 'cursive',
+                                fontWeight: 'bold'  
+                            }
+                        ]}">
+                        </ngx-qrcode-styling>
+                        <p style="text-align: center;">Home</p>
                     </div>
                 </div>
             </div>
