--- a/src/app/_component/source-job/job/job.component.html
+++ b/src/app/_component/source-job/job/job.component.html
@@ -160,26 +160,49 @@
                         <div class="col-lg-12 panel-group" *ngIf="selectedSourceTask">
                             <div class="panel panel-default">
                                 <div class="panel-body" id="sourceTaskType-1">
-                                    <div class="form-group" formGroupName="taskDetail">
-                                        <label for="serviceName">ServiceName</label>
-                                        <input type="text" class="form-control input-sm"
-                                            formControlName="serviceName"
-                                            [ngClass]="{ 'is-invalid': taskDetail.serviceName.errors }"
-                                            disabled/>
-                                        <div *ngIf="submitted && taskDetail.serviceName.errors" class="invalid-feedback">
-                                            <div *ngIf="taskDetail.serviceName.errors.required" style="color: red;">
-                                                ServiceName is required
+                                    <div class="row">
+                                        <div class="col-lg-3">
+                                            <div class="form-group" formGroupName="taskDetail">
+                                                <label for="serviceName">ServiceName</label>
+                                                <input type="text" class="form-control input-sm"
+                                                    formControlName="serviceName"
+                                                    [ngClass]="{ 'is-invalid': taskDetail.serviceName.errors }"
+                                                    disabled/>
+                                                <div *ngIf="submitted && taskDetail.serviceName.errors" class="invalid-feedback">
+                                                    <div *ngIf="taskDetail.serviceName.errors.required" style="color: red;">
+                                                        ServiceName is required
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
-                                    </div>
-                                    <div class="form-group" formGroupName="taskDetail">
-                                        <label for="queueTopicPartition">QueueTopicPartition</label>
-                                        <input type="text" class="form-control input-sm" formControlName="queueTopicPartition"
-                                            [ngClass]="{ 'is-invalid': taskDetail.queueTopicPartition.errors }"
-                                            disabled/>
-                                        <div *ngIf="submitted && taskDetail.queueTopicPartition.errors" class="invalid-feedback">
-                                            <div *ngIf="taskDetail.queueTopicPartition.errors.required" style="color: red;">
-                                                QueueTopicPartition is required
+                                        <div class="col-lg-3">
+                                            <div class="form-group" formGroupName="taskDetail">
+                                                <label for="queueTopicPartition">QueueTopicPartition</label>
+                                                <input type="text" class="form-control input-sm" formControlName="queueTopicPartition"
+                                                    [ngClass]="{ 'is-invalid': taskDetail.queueTopicPartition.errors }"
+                                                    disabled/>
+                                                <div *ngIf="submitted && taskDetail.queueTopicPartition.errors" class="invalid-feedback">
+                                                    <div *ngIf="taskDetail.queueTopicPartition.errors.required" style="color: red;">
+                                                        QueueTopicPartition is required
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-4">
+                                            <div class="form-group" formGroupName="taskDetail">
+                                                <label for="taskHomePage">HomePage</label>
+                                                <input type="text" class="form-control input-sm" formControlName="taskHomePage"
+                                                placeholder="Enter HomePage Url" disabled/>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-2">
+                                            <div class="form-group" *ngIf="isEditMode">
+                                                <label for="jobStatus">JobStatus</label>
+                                                <select class="form-control input-sm" formControlName="jobStatus" >
+                                                    <option *ngFor="let jobStatus of sourceJobStatus"
+                                                        [value]="jobStatus.value">{{jobStatus.key}}
+                                                    </option>
+                                                </select>
                                             </div>
                                         </div>
                                     </div>
@@ -194,14 +217,6 @@
                                                 TaskPayload is required
                                             </div>
                                         </div>
-                                    </div>
-                                    <div class="form-group" *ngIf="isEditMode">
-                                        <label for="jobStatus">JobStatus</label>
-                                        <select class="form-control input-sm" formControlName="jobStatus" >
-                                            <option *ngFor="let jobStatus of sourceJobStatus"
-                                                [value]="jobStatus.value">{{jobStatus.key}}
-                                            </option>
-                                        </select>
                                     </div>
                                     <div class="form-group form-check" style="margin-top: 30px;text-align: end;">
                                         <!-- completeJob job email -->
