--- a/src/app/_component/source-job/job/job.component.html
+++ b/src/app/_component/source-job/job/job.component.html
@@ -188,14 +188,14 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="col-lg-4">
+                                        <div class="col-lg-3">
                                             <div class="form-group" formGroupName="taskDetail">
-                                                <label for="taskHomePage">HomePage</label>
-                                                <input type="text" class="form-control input-sm" formControlName="taskHomePage"
+                                                <label for="homePageId">HomePage</label>
+                                                <input type="text" class="form-control input-sm" formControlName="homePageId"
                                                 placeholder="Enter HomePage Url" disabled/>
                                             </div>
                                         </div>
-                                        <div class="col-lg-2">
+                                        <div class="col-lg-3">
                                             <div class="form-group" *ngIf="isEditMode">
                                                 <label for="jobStatus">JobStatus</label>
                                                 <select class="form-control input-sm" formControlName="jobStatus" >
