--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 ﻿﻿<nav class="navbar navbar-inverse" style="border-radius: 0px;margin-bottom: 0px;" >
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" routerLink="/home">ETL</a>
+      <a class="navbar-brand" routerLink="/home">ETL 2023</a>
     </div>
     <ul class="nav navbar-nav">
       <li class="dropdown">
@@ -24,33 +24,17 @@
           <li><a routerLink="/taskList">Task List</a></li>
         </ul>
       </li>
-      <!-- <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown"
-          role="button" aria-haspopup="true" aria-expanded="false">
-          User Config<span class="caret"></span>
-        </a>
-        <ul class="dropdown-menu">
-          <li><a routerLink="/setting/queueMessage">User List</a></li>
-          <li><a routerLink="/setting/queueMessage">Authority</a></li>
-          <li><a routerLink="/setting">Group User</a></li>
-        </ul>
-      </li> -->
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown"
           role="button" aria-haspopup="true" aria-expanded="false">
           Setting<span class="caret"></span>
         </a>
         <ul class="dropdown-menu">
-          <!-- <li><a routerLink="/setting/lookpXml">Lookp Xml</a></li> -->
-          <li><a routerLink="/setting/queueMessage">QMessage</a></li>
-          <li><a routerLink="/setting">Lookup Setting</a></li>
+          <li><a routerLink="/setting">Lookup</a></li>
+          <li><a routerLink="/setting/searchEngine">Q-Result</a></li>
+          <!-- <li><a routerLink="/setting/lookpXml">Lookp XmlConfig</a></li> -->
+          <li><a routerLink="/setting/queueMessage">Q-Message</a></li>
         </ul>
-      </li>
-      <li class="dropdown">
-        <a routerLink="/searchEngine" class="dropdown-toggle" data-toggle="dropdown"
-          role="button" aria-haspopup="true" aria-expanded="false">
-          Search Engine
-        </a>
       </li>
     </ul>
   </div>
